Fixed images in all scenes

--- a/finalhour.html
+++ b/finalhour.html
@@ -48,10 +48,12 @@
 																	  <button class="scroll-button left" onclick="scrollGallery(-1, 3)"></button>
 																	  <div class="screenshot-container">
 																		  <div class="screenshot-row">
-																			  <img src="images/FinalHour/Game1.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
-																			  <img src="images/FinalHour/Game2.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
+																			  <img src="images/FinalHour/Game1.png" 																																						 <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+
+																			  <img src="images/FinalHour/Game2.png" 																																						 <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+
 																			  <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
-																			  <img src="images/FinalHour/Game4.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
+																			  <img src="images/FinalHour/Game4.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
 																		  </div>
 																	  </div>
 																	  <button class="scroll-button right" onclick="scrollGallery(1, 3)"></button>
@@ -135,11 +137,11 @@
 									<button class="scroll-button left" onclick="scrollGallery(-1, 1)"></button>
 									<div class="screenshot-container">
 										<div class="screenshot-row">
-											<img src="images/FinalHour/SS1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SS2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SS3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SS4.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SS5.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SS1.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SS2.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SS3.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SS4.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SS5.png" alt="Draft" class="responsive-image">
 										</div>
 									</div>
 									<button class="scroll-button right" onclick="scrollGallery(1, 1)"></button>
@@ -149,12 +151,12 @@
 									<button class="scroll-button left" onclick="scrollGallery(-1, 2)"></button>
 									<div class="screenshot-container">
 										<div class="screenshot-row">
-											<img src="images/FinalHour/SSS1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SSS2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SSS3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SSS4.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SSS5.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-											<img src="images/FinalHour/SSS6.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SSS1.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SSS2.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SSS3.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SSS4.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SSS5.png" alt="Draft" class="responsive-image">
+											<img src="images/FinalHour/SSS6.png" alt="Draft" class="responsive-image">
 										</div>
 									</div>
 									<button class="scroll-button right" onclick="scrollGallery(1, 2)"></button>
