--- a/mindsisle.html
+++ b/mindsisle.html
@@ -57,8 +57,8 @@
 
 						<br /> <br />
 
-						<div class="screenshot-gallery">
-							<button class="scroll-button left" onclick="scrollGallery(-1)"></button>
+						<div class="screenshot-gallery"data-gallery="1">
+							<button class="scroll-button left" onclick="scrollGallery(-1, 1)"></button>
 							<div class="screenshot-container">
 								<div class="screenshot-row">
 									<div class="video-container">
@@ -71,13 +71,17 @@
 												allowfullscreen>
 										</iframe>
 									</div>
-									<img src="images/MindsIsle/Game1.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
-									<img src="images/MindsIsle/Game2.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
-									<img src="images/MindsIsle/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
-									<img src="images/MindsIsle/Game4.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
+									<img src="images/MindsIsle/Game1.png" 																																						 <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+
+									<img src="images/MindsIsle/Game2.png" 																																						 <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+
+									<img src="images/MindsIsle/Game3.png" 																																						 <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+
+									<img src="images/MindsIsle/Game4.png" 																																						 <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+
 								</div>
 							</div>
-							<button class="scroll-button right" onclick="scrollGallery(1)"></button>
+							<button class="scroll-button right" onclick="scrollGallery(1, 1)"></button>
 						</div>
 
 
@@ -120,13 +124,13 @@
 								</ul>
 								Looking back at my list now, it was ambitious but I was determined to make it happen. Here are some of my notes and sketches for the early concepting of the game:
 								<br />
-								<img src="images/MindsIsle/Sketch1.png" alt="Draft" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Sketch1.png" alt="Draft" class="responsive-image">
 								Game initial ideation and systems.<br /><br />
-								<img src="images/MindsIsle/Sketch2.png" alt="Draft" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Sketch2.png" alt="Draft" class="responsive-image">
 								Island desgin and lore ideation. <br /><br />
-								<img src="images/MindsIsle/Sketch3.png" alt="Draft" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Sketch3.png" alt="Draft" class="responsive-image">
 								Concepts for quest system quests, UI and forge model/<br /><br />
-								<img src="images/MindsIsle/Sketch4.png" alt="Draft" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Sketch4.png" alt="Draft" class="responsive-image">
 								Loop ideation, building system and (pseudo) pseduocode.
 
 
@@ -161,7 +165,7 @@
 								This system I followed and created was flexible and allowed easy integration for future use. I took it a step further by using them for my crafting system, storage system, gathering system and furnace system! Scriptable objects were one of the most useful things I've ever discovered in c# and this game would be in shambles without them.
 								<br /><br />
 								Here's a quick gif showing the functionality:<br />
-								<img src="images/MindsIsle/Inv.gif" alt="Inventory GIF" data-position="center center" style="width:1280px;height:720px;"><br />
+								<img src="images/MindsIsle/Inv.gif" alt="Draft" class="responsive-image">
 
 
 							</details>
@@ -177,7 +181,7 @@
 
 
 
-								<img src="images/MindsIsle/pp5.png" alt="Icons1" data-position="center center" style="width:1120px;height:1768px;"><br />
+								<img src="images/MindsIsle/pp5.png" alt="Draft" class="responsive-image">
 								Before & After Post-Processing <br />
 
 							</details>
@@ -203,7 +207,7 @@
 								Again, this reinforced my lesson on how much planning matters. I learnt how powerful raycasting is for dynamic world interactions and I feel a lot more confident using it in future projects. Iteration and simplicity are key, as when I restarted from “scratch” I would use the same ideas and concepts just simplifying them and rewriting the code. At the end of it, I’m still not completely happy with the grid system as I still have issues with placing some objects in the terrain when snapping.
 								<br /><br />
 								Here's a quick gif showing the functionality:<br />
-								<img src="images/MindsIsle/Build.gif" alt="Draft" data-position="center center" style="width:1280px;height:720px;"><br />
+								<img src="images/MindsIsle/Build.gif" alt="Draft" class="responsive-image">
 
 
 							</details>
@@ -233,15 +237,15 @@
 								I didn’t have access to Maya or Photoshop anymore, so I had to learn Blender and Krita. Learning both in one night was intense, but it paid off. Krita wasn’t really a challenge but jumping into Bllender was completely different from Maya. I created all the weapon models in Blender and drew the icons in Krita. Picking up new software is always handy for future use because I always find myself picking up new techniques I can apply in other applications. For example, when watching Blender tutorials I learnt how to use the 3D cursor tool (this is in Maya but I had never used it before) which made making the models so much easier.
 								<br /><br />
 								Here are some of the assets I created:<br />
-								<img src="images/MindsIsle/Icons1.png" alt="Icons1" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Icons1.png" alt="Draft" class="responsive-image">
 								Icons for tools (Sword, Picaxe, Hatchet)<br /><br />
-								<img src="images/MindsIsle/Icons2.png" alt="Icons1" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Icons2.png" alt="Draft" class="responsive-image">
 								Icons for buildables (Forge, Storage box, Foundation)<br /><br />
-								<img src="images/MindsIsle/Icons3.png" alt="Icons1" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Icons3.png" alt="Draft" class="responsive-image">
 								Icons for materials (Wood, Stone, Raw metal)<br /><br />
-								<img src="images/MindsIsle/Icons4.png" alt="Icons1" data-position="center center" style="width:1120px;height:442px;"><br />
+								<img src="images/MindsIsle/Icons4.png" alt="Draft" class="responsive-image">
 								Icons for ranged weapons (Bow and Arrows).<br /><br />
-								<img src="images/MindsIsle/Models.png" alt="Draft" data-position="center center" style="width:800px;height:508px;"><br />
+								<img src="images/MindsIsle/Models.png" alt="Draft" class="responsive-image">
 								Models for the picaxe, hatchet, sword and Quest Giver in Blender.
 								<br /><br />  For other assets, I turned to the Unity Asset Store. I’d avoided it in the past because I didn’t want to rely on pre-made assets, but it was necessary with the scope of this project. Another hurdle here was matching styles across assets from different creators. This was an important lesson I learnt early on looking for assets so I was able to make it work. All the assets I used from the asset store were free to use (Standard Unity Asset Store EULA) or I had purchased.
 
@@ -336,21 +340,40 @@
 		</script>
 
 		<!-- Screenshots -->
-		<script>
-			let scrollPosition = 0;
+		<script>let scrollPositions = {};
 
-			function scrollGallery(direction) {
-				const container = document.querySelector('.screenshot-row');
+			function scrollGallery(direction, galleryId) {
+				const gallery = document.querySelector(`.screenshot-gallery[data-gallery="${galleryId}"]`);
+				const container = gallery.querySelector('.screenshot-container');
+				const row = gallery.querySelector('.screenshot-row');
 				const scrollAmount = 300;
-				const maxScroll = container.scrollWidth - container.offsetWidth;
 
-				scrollPosition += direction * scrollAmount;
-				if (scrollPosition < 0) scrollPosition = 0;
-				if (scrollPosition > maxScroll) scrollPosition = maxScroll;
+				if (!row || !container) {
+					console.error(`Gallery with ID ${galleryId} does not have the required elements.`);
+					return;
+				}
 
-				container.style.transform = `translateX(-${scrollPosition}px)`;
-			}
-		</script>
+				const maxScroll = row.scrollWidth - container.offsetWidth;
+
+				// Initialize the scroll position for the gallery if not already set
+				if (!scrollPositions[galleryId]) {
+					scrollPositions[galleryId] = 0;
+				}
+
+				// Adjust the scroll position
+				scrollPositions[galleryId] += direction * scrollAmount;
+
+				// Prevent scrolling beyond bounds
+				if (scrollPositions[galleryId] < 0) {
+					scrollPositions[galleryId] = 0;
+				}
+				if (scrollPositions[galleryId] > maxScroll) {
+					scrollPositions[galleryId] = maxScroll;
+				}
+
+				// Apply the scroll effect
+				row.style.transform = `translateX(-${scrollPositions[galleryId]}px)`;
+			}</script>
 
 
 
